--- a/foundry.toml
+++ b/foundry.toml
@@ -2,10 +2,14 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+via_ir = true
 remappings = [
     "@openzeppelin/contracts=lib/openzeppelin-contracts/contracts",
     "@openzeppelin/contracts-upgradeable=lib/openzeppelin-contracts-upgradeable/contracts"
 ]
+
+[profile.ci]
+via_ir = true
 
 [fmt]
 line_length = 120
