--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,4 +59,6 @@ jobs:
             --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 \
             --rpc-url http://localhost:8545 -vvvv
         env:
-          NETWORK: "mainnet"
+          # Setting test mode to avoid requiring Gnosis Safe address
+          FOUNDRY_PROFILE: ci
+          NETWORK: "test"
