--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,6 +36,12 @@ jobs:
         run: |
           forge test -vvv
         id: test
+        env:
+          # Mock values for testing
+          ETHERSCAN_API_KEY: "DUMMY_KEY"
+          OWNER1: "0x70997970C51812dc3A010C7d01b50e0d17dc79C8"
+          OWNER2: "0x3C44CdDdB6a900fa2b585dd299e03d12FA4293BC"
+          OWNER3: "0x90F79bf6EB2c4f870365E785982E1f101E93b906"
 
   deploy-test:
     needs: check
@@ -59,6 +65,10 @@ jobs:
             --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 \
             --rpc-url http://localhost:8545 -vvvv
         env:
-          # Setting test mode to avoid requiring Gnosis Safe address
+          # Setting test mode to avoid requiring real values
           FOUNDRY_PROFILE: ci
           NETWORK: "test"
+          ETHERSCAN_API_KEY: "DUMMY_KEY"
+          OWNER1: "0x70997970C51812dc3A010C7d01b50e0d17dc79C8"
+          OWNER2: "0x3C44CdDdB6a900fa2b585dd299e03d12FA4293BC"
+          OWNER3: "0x90F79bf6EB2c4f870365E785982E1f101E93b906"
